# saved-file-cli

./: Cargo.toml  LICENSE.md  README.md  install.bat  install.sh
.github/workflows/: rust.yml
src/: cli.rs  files.rs  main.rs  storage.rs
