[package]
name = "savedfile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11" }
console = "0.15.7"
dialoguer = "0.10.4"
lazy_static = "1.4.0"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
